--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.7-beta.1",
